# QRcode_Communication

./: README.md  WORKRECORD.md  main.py  pyproject.toml  requirements.txt
jujinqian/: README.md  main.py  rcoder.py
rcoder/: __init__.py  decoder.py  encoder.py
src/jujinqian/: main.py  rcoder.py  readqr.py
test/: conftest.py  test_rcoder.py
