[project]
name = "qrcode-communication"
version = "0.1.0"
description = "Encode data into QRCode. Decode QRCode to python data"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "qrcode[pil]>=8.2",
    "numpy>=2.2.6",
    "msgpack>=1.1.2",
    "opencv-python>=4.12.0.88",
    "qreader>=3.16",
    "lark>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
